--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "backend-node-ts-template",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/server.ts",
+    "build": "rimraf dist && tsc && tsc-alias",
+    "start": "node dist/server.js",
     "lint": "eslint src --ext .js,.ts --cache",
     "lint:fix": "eslint src --ext .js,.ts --fix --cache",
     "prettier": "prettier --check \"src/**/*.{js,ts,json}\"",
@@ -23,6 +25,10 @@
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -37,5 +43,14 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.5",
+    "socket.io": "^4.8.3"
   }
 }
